# opencvDatasetModifier

./: .ycm_extra_conf.py  CMakeLists.txt  README.md
src/: folderParser.cpp  imageOverlayAndAugmentor.cpp  main.cpp
src/include/: folderParser.h  imageOverlayAndAugmentor.h
